# synapse

./: .env.example  .gitignore  README.md  Synapse_Project_Writeup.docx  alembic.ini  example.db  pyproject.toml
agents/: analyst.py  base.py  coder.py  graph.py  researcher.py  state.py  supervisor.py  writer.py
alembic/: env.py
alembic/versions/: 8aee5ab98517_initial_schema.py  b3c7e1a29d84_add_auth_fields_to_users.py
api/: auth.py  celery_app.py  config.py  main.py  models.py  rate_limiter.py  websocket_handler.py
api/routes/: auth.py  feedback.py  memory.py  tasks.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthPage.tsx  DevLogin.tsx  MemoryExplorer.tsx  TaskDashboard.tsx  TraceViewer.tsx
frontend/src/context/: AuthContext.tsx
infra/: Dockerfile  ci.yml  docker-compose.yml
memory/: embeddings.py  episodic_store.py  summarizer.py  working_memory.py
observability/: anomaly_detector.py  langfuse_integration.py  otel_config.py  slack_alerter.py
tests/: test_agent.py
